# taino_backend

./: .dockerignore  .gitignore  .pre-commit-config.yml  Makefile  README.md  pyproject.toml  requirements.txt
apps/activity_log/: admin.py  apps.py  middleware.py  models.py  tasks.py
apps/address/: apps.py  models.py
apps/ai_chat/: admin.py  apps.py  routing.py  signals.py  tasks.py
apps/ai_support/: admin.py  apps.py  models.py  routing.py  tasks.py
apps/analyzer/: admin.py  apps.py  tasks.py
apps/authentication/: __init__.py  admin.py  apps.py  exceptions.py  managers.py  permissions.py  signals.py
apps/banner/: admin.py  apps.py  models.py
apps/case/: apps.py
apps/chat/: apps.py  routing.py  signals.py  tasks.py
apps/comment/: apps.py  models.py
apps/common/: admin.py  apps.py
apps/country/: apps.py  models.py
apps/crm_hub/: admin.py  apps.py  signals.py  tasks.py
apps/document/: apps.py  (+1 more)
base_utils/: aes.py  base64.py  base_exceptions.py  base_models.py  base_mongo_models.py  base_tests.py  clean.py  dictionary.py  enums.py  etlo_document.py  file_processor.py  files.py  filters.py  finance.py  hash.py  jalali.py  jwt.py  numbers.py  permissions.py  produce.py  randoms.py  schema.py  search.py  services.py  subscription.py  text.py  time.py  types.py  validators.py  voice_processor.py
config/: asgi.py  celery_config.py  renderer.py  swagger.py  urls.py
docker/: .env.sample  Dockerfile  celery.Dockerfile  docker-compose.yml  entrypoint.sh  services.compose.yml  socket.Dockerfile
docs/: CONTRIBUTING.md  ERROR_FORMAT.md  TRANSLATION.md
(+633 files in other folders)
